[Bug Fixed]: Profile page some alignment issue fixed

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -26,7 +26,7 @@
 }
 
 .brands-profile-page-wrapper label {
-    padding-right: 15px;
+    padding-right: 10px;
     font-size: 13px;
     font-weight: 400;
 }
@@ -319,7 +319,13 @@
     background-color: #f1b242;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1170px) {
+    .personal-info-without-fb label, .personal-info-without-fb input, .personal-info-without-fb select, .personal-info-without-fb .form-group textarea, .personal-info-without-fb .form-group textarea.short_bio {
+        width: 49%;
+    }
+}
+
+@media (max-width: 768px) {
     .personal-info-without-fb label, .personal-info-without-fb input, .personal-info-without-fb select, .personal-info-without-fb .form-group textarea, .personal-info-without-fb .form-group textarea.short_bio {
         display: block;
         text-align: left;
